Disable the direct-drawing optimization for quads with opacity.

R=enne@chromium.org
BUG=709081
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2821133002
Cr-Commit-Position: refs/heads/master@{#465078}

Former-commit-id: ada0f67fca5c772aac731925e3ce4918548a04a5